name:                speedrun-stats
version:             0.0.0
synopsis:            Silly speedrun statistics
description:         Extracting silly speedrun statistics from various sources.
license:             GPL-3
license-file:        LICENSE
author:              Sampsa Kiiskinen
maintainer:          tuplanolla@gmail.com
category:            ACME
build-type:          Simple
cabal-version:       >=1.10

executable arcus
  main-is:             Main.hs
  build-depends:       base >=4.8 && <5.0,
                       text >=1.2 && <2.0,
                       time >=1.5 && <2.0,
                       xml >=1.3 && <2.0
  default-language:    Haskell2010
  ghc-options:         -O3 -Wall -fno-warn-name-shadowing -rtsopts -threaded
